src/objects/Training_Step__c.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_1__c</fullName>
        <label>Content 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_2__c</fullName>
        <label>Content 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_3__c</fullName>
        <label>Content 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heading_1__c</fullName>
        <label>Heading 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heading_2__c</fullName>
        <label>Heading 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heading_3__c</fullName>
        <label>Heading 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Path__c</fullName>
        <label>Training Path</label>
        <referenceTo>Training_Path__c</referenceTo>
        <relationshipLabel>Training Steps</relationshipLabel>
        <relationshipName>Training_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Step</label>
    <nameField>
        <label>Training Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>